// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultToast component testing DefaultToast error 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh bFZjUR"
    style="height: 8px;"
    transitionduration="0"
  >
    <div
      background="#FFE2E5"
      boxshadow="0px 0px 16px rgba(249, 105, 121, 0.16)"
      class="sc-guDLey etjEMU"
      opacity="1"
      transform="translate3d(0,0,0)"
      transitionduration="0"
    >
      <div
        alignitems="center"
        class="sc-jTQCzO dWpyub"
        display="flex"
        flex="1"
        justifycontent="space-between"
      >
        <div
          alignitems="center"
          class="sc-jTQCzO bsFMtc"
          display="flex"
        >
          <div
            class="sc-dmyCSP cidRji"
          >
            <span
              class="sc-gLLuof chjjeF"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H24V24H0Z"
                  fill="none"
                />
                <path
                  d="M12.866,3l9.526,16.5a1,1,0,0,1-.866,1.5H2.474a1,1,0,0,1-.866-1.5L11.134,3a1,1,0,0,1,1.732,0ZM11,16v2h2V16Zm0-7v5h2V9Z"
                  fill="#EB0A4E"
                />
              </svg>
            </span>
          </div>
          <p
            align="left"
            class="sc-iBdnpw dQBDxL"
            color="#A90556"
            font-size="14px"
            lineheight="1.4"
            weight="bold"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hLQSwg cgCGiC"
        >
          <span
            class="sc-gLLuof hiBJch"
            size="18"
          >
            <svg
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                fill="#F96979"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        autodismisstimeout="0"
        backgroundcolor="#EB0A4E"
        class="sc-eDLKkx jHxEqA"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast info 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh bFZjUR"
    style="height: 8px;"
    transitionduration="0"
  >
    <div
      background="#CDF0FE"
      boxshadow="0px 0px 16px rgba(156, 221, 253, 0.16)"
      class="sc-guDLey fvhsgL"
      opacity="1"
      transform="translate3d(0,0,0)"
      transitionduration="0"
    >
      <div
        alignitems="center"
        class="sc-jTQCzO dWpyub"
        display="flex"
        flex="1"
        justifycontent="space-between"
      >
        <div
          alignitems="center"
          class="sc-jTQCzO bsFMtc"
          display="flex"
        >
          <div
            class="sc-dmyCSP cidRji"
          >
            <span
              class="sc-gLLuof chjjeF"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                />
                <path
                  d="M16723,12664a10,10,0,1,1,10-10A9.937,9.937,0,0,1,16723,12664Zm-1-11h0v5h2v-5Zm0-4h0v2h2v-2Z"
                  fill="#0B82F4"
                  transform="translate(-16711 -12642)"
                />
              </svg>
            </span>
          </div>
          <p
            align="left"
            class="sc-iBdnpw fYxhcZ"
            color="#054BAF"
            font-size="14px"
            lineheight="1.4"
            weight="bold"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hLQSwg cgCGiC"
        >
          <span
            class="sc-gLLuof hiBJch"
            size="18"
          >
            <svg
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                fill="#9CDDFD"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        autodismisstimeout="0"
        backgroundcolor="#0B82F4"
        class="sc-eDLKkx hUJDOh"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast success 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh bFZjUR"
    style="height: 8px;"
    transitionduration="0"
  >
    <div
      background="#ECFCD3"
      boxshadow="0px 0px 16px rgba(180, 237, 123, 0.16)"
      class="sc-guDLey fFGDWJ"
      opacity="1"
      transform="translate3d(0,0,0)"
      transitionduration="0"
    >
      <div
        alignitems="center"
        class="sc-jTQCzO dWpyub"
        display="flex"
        flex="1"
        justifycontent="space-between"
      >
        <div
          alignitems="center"
          class="sc-jTQCzO bsFMtc"
          display="flex"
        >
          <div
            class="sc-dmyCSP cidRji"
          >
            <span
              class="sc-gLLuof chjjeF"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 22C6.477 22 2 17.523 2 12C2 6.477 6.477 2 12 2C17.523 2 22 6.477 22 12C22 17.523 17.523 22 12 22ZM10.886 16.7533L17.956 9.68226L16.542 8.26826L10.886 13.9253L8.05701 11.0963L6.64302 12.5103L10.886 16.7533Z"
                  fill="#63C427"
                />
              </svg>
            </span>
          </div>
          <p
            align="left"
            class="sc-iBdnpw cYXfvn"
            color="#338D13"
            font-size="14px"
            lineheight="1.4"
            weight="bold"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hLQSwg cgCGiC"
        >
          <span
            class="sc-gLLuof hiBJch"
            size="18"
          >
            <svg
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                fill="#B4ED7B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        autodismisstimeout="0"
        backgroundcolor="#63C427"
        class="sc-eDLKkx cONyqk"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DefaultToast component testing DefaultToast warning 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh bFZjUR"
    style="height: 8px;"
    transitionduration="0"
  >
    <div
      background="#FEFACF"
      boxshadow="0px 0px 16px rgba(253, 229, 78, 0.16)"
      class="sc-guDLey gmesQt"
      opacity="1"
      transform="translate3d(0,0,0)"
      transitionduration="0"
    >
      <div
        alignitems="center"
        class="sc-jTQCzO dWpyub"
        display="flex"
        flex="1"
        justifycontent="space-between"
      >
        <div
          alignitems="center"
          class="sc-jTQCzO bsFMtc"
          display="flex"
        >
          <div
            class="sc-dmyCSP cidRji"
          >
            <span
              class="sc-gLLuof chjjeF"
              size="24"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H24V24H0Z"
                  fill="none"
                />
                <path
                  d="M12.866,3l9.526,16.5a1,1,0,0,1-.866,1.5H2.474a1,1,0,0,1-.866-1.5L11.134,3a1,1,0,0,1,1.732,0ZM11,16v2h2V16Zm0-7v5h2V9Z"
                  fill="#FCD914"
                />
              </svg>
            </span>
          </div>
          <p
            align="left"
            class="sc-iBdnpw fXJFAi"
            color="#785F03"
            font-size="14px"
            lineheight="1.4"
            weight="bold"
          >
            hoge
          </p>
        </div>
        <div
          class="sc-hLQSwg cgCGiC"
        >
          <span
            class="sc-gLLuof hiBJch"
            size="18"
          >
            <svg
              fill="none"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                fill="#FDE54E"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        autodismisstimeout="0"
        backgroundcolor="#FCD914"
        class="sc-eDLKkx klQYUi"
        opacity="0"
      />
    </div>
  </div>
</DocumentFragment>
`;
